<resources>
    <string name="app_name">Pasar Cipanas</string>
    <string name="market_name">Pasar Cipanas</string>
    <string name="operation_hours">operation hours are everyday from about 6 A.M. to about 6 P.M.</string>
    <string name="location">Cipanas, Cianjur, Cipanas, Kabupaten Cianjur, Jawa Barat 43253</string>
    <string name="description">Pasar Cipanas is a traditional market where locally grown vegetables are sold, things also sold there include fruits, clothes, shoes, school supplies and much more.</string>
    <string name="places_in_cipanas">A Shop in Cipanas:</string>
</resources>
